# ai-resume

./: .gitignore  Dockerfile  README.md  pyproject.toml  test_pipeline.py
data/: githubAyushChauhan9389.json  users.db
data/github/: Ayushchauhan9389.json  profile.json  techieshreya.json
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/builder/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: AuthScreen.tsx  Footer.tsx  Navbar.tsx  ResumeForm.tsx  ThemeProvider.tsx  WorkflowsTab.tsx
frontend/components/landing/: FAQ.tsx  Features.tsx  FinalCTA.tsx  Hero.tsx  HowItWorks.tsx  Pricing.tsx  Stats.tsx  Testimonials.tsx
output/: temp_resume.typ
scripts/: Test_phase.py  check_model.py
src/: agent.py  auth.py  builder.py  fetch_github.py  gap_analyzer.py  interactive_refiner.py  main.py  refine_profile.py  schemas.py  server.py  test_fetch.py  tools.py
templates/: classic.typ  modern.typ
